# MLOps_project

./: .gitignore  README.md  datasets.dvc  docker-compose.yml  dvc.yaml  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: tests.yml
configs/: inference.yaml  process_data.yaml  torchserve_export.yaml  train.yaml  validation.yaml
configs/dataset/: samsum.yaml
configs/model/: llama3.2-1b-instruct.yaml  qwen3-30b-instruct.yaml  qwen3-4b-instruct.yaml
configs/peft_config/: LoRA_r8.yaml
configs/trainer_config/: simple_trainer.yaml
configs/validation/: simple_validation.yaml
datasets/: .gitignore  samsum.dvc
docker/inference/: Dockerfile
docker/serve/: Dockerfile
docker/train/: Dockerfile
prompts/: samsum_sysprompt.txt  samsum_usrprompt.txt
src/: inference.py  load_data.py  load_model.py  process_dataset.py  train.py
src/data_generation/: samsum.py
src/dialogue_summarization/: __init__.py  inference.py  load_model.py  process_dataset.py  torchserve_export.py  train.py  validation.py
src/dialogue_summarization/data_generation/: samsum.py
src/dialogue_summarization/loggers/: log_hydra.py
src/metrics/: rouge.py
tests/: test_cli_smoke.py  test_data_generation_samsum.py  test_load_data.py  test_load_model.py  test_log_hydra.py  test_pipeline_integration.py  test_process_dataset.py  test_train.py  test_validation.py
torchserve/: config.properties  handler.py  model_config.json  sample_input.json
